--- a/public/css/main.css
+++ b/public/css/main.css
@@ -275,7 +275,6 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   background-color: transparent;
   width: 100%;
   height: 84px;
-  top: 40px;
   left: 0px;
 
   -webkit-transition: height 0.3s, background-color 0.3s;
@@ -2678,7 +2677,11 @@ input.num-product::-webkit-inner-spin-button {
   background-repeat: no-repeat;
 }
 
-
+@media (min-width: 991px) {
+  .bg-img1 {
+    margin-top: 24px;
+  }
+}
 
 
 /*==================================================================
